# fcitx-vinput-rs

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENT.md  Cargo.toml  README.md  clippy.toml  justfile
.github/workflows/: ci.yml
cpp/fcitx5-addon/: CMakeLists.txt  README.md  vinput-addon.conf.in
cpp/fcitx5-addon/include/vinput_fcitx_bridge/: dbus_contract.h  fcitx_addon.h  fcitx_candidates.h  fcitx_key_trigger.h  fcitx_outcome.h  fcitx_selection.h  frontend_bridge.h  recognition_payload.h  scene_defaults.h  sd_bus_daemon_client.h
cpp/fcitx5-addon/src/: fcitx_addon.cpp  fcitx_addon_factory.cpp  fcitx_candidates.cpp  fcitx_key_trigger.cpp  fcitx_outcome.cpp  fcitx_selection.cpp  frontend_bridge.cpp  recognition_payload.cpp  sd_bus_daemon_client.cpp
cpp/fcitx5-addon/tests/: fcitx_candidates_smoke.cpp  fcitx_key_trigger_smoke.cpp  fcitx_selection_smoke.cpp  frontend_bridge_smoke.cpp  recognition_payload_smoke.cpp  sd_bus_daemon_client_smoke.cpp
crates/vinput-asr/: Cargo.toml
crates/vinput-asr/src/: command.rs  error.rs  factory.rs  lib.rs  mock.rs  payload.rs  sherpa.rs  tests.rs  traits.rs
crates/vinput-audio/: Cargo.toml
crates/vinput-audio/src/: lib.rs  pipewire_backend.rs
crates/vinput-cli/: Cargo.toml
crates/vinput-cli/src/: main.rs
crates/vinput-cli/tests/: architecture_docs.rs  audio_devices.rs  config_validate.rs  fcitx_bridge_contract.rs  fcitx_bridge_cpp_smoke.rs  help.rs  legacy_docs.rs  protocol.rs  readme_demo.rs  readme_layout.rs  readme_smoke.rs  readme_tooling.rs  registry_validate.rs
crates/vinput-cli/tests/common/: mod.rs
crates/vinput-config/: Cargo.toml
crates/vinput-config/src/: lib.rs
crates/vinput-config/tests/: legacy_compat.rs
crates/vinput-daemon/: Cargo.toml
crates/vinput-daemon/src/: dbus_service.rs  lib.rs  main.rs  runtime.rs
crates/vinput-daemon/src/runtime/: adapter_process.rs  diagnostics.rs  errors.rs  recording.rs  reload.rs  tests.rs
crates/vinput-daemon/tests/: cli.rs  dbus_integration.rs
crates/vinput-protocol/: Cargo.toml
crates/vinput-protocol/src/: asr.rs  dbus.rs  lib.rs  recognition.rs  status.rs  text.rs
crates/vinput-registry/: Cargo.toml
crates/vinput-registry/src/: archive.rs  asset.rs  cache.rs  checksum.rs  error.rs  fetch.rs  lib.rs  materialize.rs  plan.rs  schema.rs  staging.rs  tests.rs
crates/vinput-registry/tests/: staging_paths.rs
crates/vinput-text/: Cargo.toml
crates/vinput-text/src/: adapter_runtime.rs  command.rs  context_cache.rs  core.rs  error.rs  lib.rs  openai.rs  payload.rs  prompt.rs  tests.rs
data/: default-config.json  e2e-command-demo-config.json  org.fcitx.Vinput.service.in  sample-registry-index.json
docs/: README.md  development.md
docs/architecture/: README.md  asr-contract.md  audio-contract.md  bootstrap.md  config-contract.md  dbus-service.md  registry-contract.md  target-architecture.md  text-contract.md
docs/legacy/: README.md  source-annotations.md
docs/migration/: agent-kickoff.md  e2e-port-plan.md
docs/review/: fcitx5-vinput-gap-review.md
fixtures/recognition/: menu.json  raw.json  sentinel.json
scripts/: run-cpp-dbus-activation-smoke.sh  run-cpp-dbus-configured-activation-smoke.sh  run-cpp-dbus-pipewire-live-smoke.sh  run-cpp-dbus-smoke.sh  run-ime-configured-activation-smoke.sh  write-demo-wav.py
