[package]
name = "vinput-asr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vinput-audio = { path = "../vinput-audio" }
vinput-protocol = { path = "../vinput-protocol" }
vinput-config = { path = "../vinput-config" }

