[package]
name = "vinput-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
pipewire-backend = ["dep:pipewire"]

[dependencies]
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
pipewire = { workspace = true, optional = true }
