[package]
name = "vinput-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
vinput-config = { path = "../vinput-config" }
vinput-protocol = { path = "../vinput-protocol" }

[dev-dependencies]
insta.workspace = true
