[package]
name = "vinput-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
dbus-integration = []
pipewire-backend = ["vinput-audio/pipewire-backend"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
vinput-asr = { path = "../vinput-asr" }
vinput-audio = { path = "../vinput-audio" }
vinput-config = { path = "../vinput-config" }
vinput-protocol = { path = "../vinput-protocol" }
vinput-text = { path = "../vinput-text" }
zbus.workspace = true

[dev-dependencies]
futures-util.workspace = true
insta.workspace = true
