[package]
name = "vinput-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vinput-config = { path = "../vinput-config" }

[dev-dependencies]
tempfile.workspace = true
