[package]
name = "vinput-text"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vinput-config = { path = "../vinput-config" }
vinput-protocol = { path = "../vinput-protocol" }
